<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/summaryLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".fragments.OrderSummaryFragment">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvLayoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="פרטי משלוח"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <FrameLayout
                android:id="@+id/flAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toBottomOf="@id/tvLayoutAddress">


                <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/clNewAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:animateLayoutChanges="true"
                    android:visibility="invisible"
                    tools:visibility="visible">

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvAddAddress"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:gravity="center_vertical"
                        android:focusableInTouchMode="true"
                        android:text="הוסף כתובת"
                        android:textSize="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </android.support.constraint.ConstraintLayout>


                <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/clAddressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:animateLayoutChanges="true"
                    android:visibility="gone"
                    tools:visibility="gone">

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:id="@+id/navAddressFragment"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/ic_navigation"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvDefaultAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:text="ברירת מחדל"
                        android:textColor="#FA5252"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/fullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="first and last name"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="address"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fullName" />


                    <TextView
                        android:id="@+id/tvPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="phone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />


                </android.support.constraint.ConstraintLayout>
            </FrameLayout>

            <View
                android:id="@+id/lineS1"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="#90DBDBDB"
                app:layout_constraintTop_toBottomOf="@id/flAddress" />

            <FrameLayout
                android:id="@+id/flOrderDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lineS1">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">


                    <TextView
                        android:id="@+id/tvLayoutMills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="פרטי הזמנה"
                        android:textSize="25sp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="8dp" />


                    <!--<View-->
                        <!--android:id="@+id/divider1"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:layout_marginTop="8dp"-->
                        <!--android:background="?android:attr/listDivider"-->
                        <!--app:layout_constraintTop_toBottomOf="@id/tvLayoutMills" />-->


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvSummary"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvLayoutMills" />


                </android.support.constraint.ConstraintLayout>

            </FrameLayout>


            <View
                android:id="@+id/lineS2"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:background="#90DBDBDB"
                app:layout_constraintTop_toBottomOf="@id/flOrderDetails" />


            <FrameLayout
                android:id="@+id/flSummaryOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toBottomOf="@id/lineS2">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/tvSummaryTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="סיכום הזמנה"
                        android:textSize="25sp"
                        app:layout_constraintTop_toTopOf="parent" />


                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintTop_toBottomOf="@id/tvSummaryTitle" />


                    <TextView
                        android:id="@+id/tvMills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/mills"
                        app:layout_constraintTop_toBottomOf="@id/divider3" />

                    <TextView
                        android:id="@+id/tvShipping"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/shipping"
                        app:layout_constraintTop_toBottomOf="@id/tvMills" />

                    <TextView
                        android:id="@+id/tvTotalPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/tvTotalPrice"
                        app:layout_constraintTop_toBottomOf="@id/tvShipping" />


                </android.support.constraint.ConstraintLayout>


            </FrameLayout>

            <FrameLayout
                android:id="@+id/bottomFL"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/flSummaryOrder"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="90dp">

            </FrameLayout>


        </android.support.constraint.ConstraintLayout>


    </android.support.v4.widget.NestedScrollView>



    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/bottom_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:elevation="20dp"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="bottom|center">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnPlaceOrder"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"
                android:textColor="#FFFFFF"
                android:text="@string/placeOrder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1.0" />



        </android.support.constraint.ConstraintLayout>



    </android.support.design.widget.CoordinatorLayout>




</android.support.design.widget.CoordinatorLayout>
